--- a/docs/templates/register.html
+++ b/docs/templates/register.html
@@ -31,6 +31,10 @@ Register
         {{ form.password_confirm(class = "rounded-md bg-slate-300 text-black my-3", placeholder = "Confirm Password") }}
     </div>
 
+    <div class="flex-col flex">
+        {{ form.is_manager_field.label(class=" ms-5 mt-2") }}
+        {{ form.is_manager_field(class = "rounded-md bg-slate-300 text-black my-3") }}
+    </div>
     {{ form.submit(class = "mx-auto block bg-gray-800 hover:bg-gray-900 py-1 px-3 rounded-md mt-4")}}
 </form>
 {% endblock %}
