Initialized tasks data list

--- a/docs/templates/tasks.html
+++ b/docs/templates/tasks.html
@@ -11,8 +11,7 @@
     
 {% block content %}
 {% for task in tasks %}
-<p>{{ task['title'] }}</p>
-    <p>{{ task['descriptionText'] }}</p>
+<p>{{ task.title }}</p>
 {% endfor %}
 {% endblock %}
 
