--- a/docs/templates/createAnnouncement.html
+++ b/docs/templates/createAnnouncement.html
@@ -52,7 +52,7 @@
             </div>
             <button class="rounded-full h-10 bg-yellow-200 mt-auto">Log In</button>
         </div>
-        <form method = "post">
+        <form method = "POST">
         <div class="flex flex-col">
             <div class="flex flex-row">
 
