--- a/docs/templates/createAnnouncement.html
+++ b/docs/templates/createAnnouncement.html
@@ -1,84 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-    <title>EmpowerU</title>
-    <!--
-    <style type="text/tailwindcss">
-        @layer utilities {
-          p {
-            @apply text-sm
-          }
-        }
-    </style>
-    -->
-    
-</head>
-<body class="bg-gray-200 ">
-    <div class="flex flex-row h-screen"> <!--Entire container for website-->
-        <div class="bg-white rounded-3xl border-solid border-8 m-2 w-1/4 p-6 flex flex-col"> <!--Left box-->
-            <div class="flex flex-row">
-                <img src="{{url_for('static', filename='/images/EmpowerULogo.svg')}}"  alt="EmpowerU Logo"> <!--EmpowerU Logo-->
-                <h1 class="text-xl font-bold ml-6">EmpowerU</h1> <!--EmpowerU Title-->
-            </div>
-            <div class="flex flex-row">
-                <div class="w-10 h-10 rounded-full mt-5 bg-slate-300"></div> <!--Profile Photo-->
-                <div>
-                    <p class="mt-5 ml-4 font-semibold">Name here</p> <!--Name-->
-                    <p class="ml-4 text-xs text-gray-400">Walmart Inc.</p> <!--Company Name-->
-                </div>
-            </div>
-            <div class="flex flex-row mt-5 justify-between"> <!--Container for num of announcements-->
-                <p class="text-sm text-gray-400">Announcements</p> 
-                <p class="bg-gray-300 text-slate-500 text-center w-5 h-5 text-sm">10</p> 
-            </div>
-            <div class="mt-2 text-gray-400 flex flex-row justify-between"> <!--Container for num of check-ins-->         
-                <p class="text-sm">Check-ins</p>
-                <p class="bg-gray-300 text-slate-500 text-center w-5 h-5 text-sm">4</p>
-            </div>
-            <div class="rounded-full mt-3 h-1 bg-slate-300"></div> <!--Line divider-->
-            <div class="text-gray-400 text-sm"> <!--Label for "menu"-->
-                <p class="mt-3">Menus</p>
-            </div>
-            <div class="flex flex-col gap-y-3 mt-5 ml-6">
-                <a href="">Dashboard</a> <!--Dashboard button-->
-                <a href="">Announcements</a> <!--Announcements button-->
-                <a href="">Tasks</a> <!--Tasks button-->
-                <a href="">Check-ins & Resources</a> <!--Check-ins & resources button-->
-            </div>
-            <button class="rounded-full h-10 bg-yellow-200 mt-auto">Log In</button>
-        </div>
+{% extends 'base.html' %}
+
+{% block title %}
+Create Announcements
+{% endblock %}
+
+{% block head %} 
+{% endblock %}
+
+{% block body %}
+    <main class="flex flex-col">
+        <h1 class = "text-5xl font-bold mt-2">Create Announcement</h1>
         <form method = "POST">
-        <div class="flex flex-col">
-            <div class="flex flex-row">
-
-
-                <input type="text" placeholder="Insert Title Here" name="titleBox" class="h-12 mt-8 border-solid border-2 rounded-2xl border-black w-5/6">
-
-                <button class="ml-8 border-black border rounded-xl text-xl mt-8 w-36 bg-blue-300 h-12">Post</button>
-             
-
-            </div>
-
-            <textarea class="mt-10" name="chatBox" placeholder="Insert Description Here" rows="15" cols="120"></textarea>
-
-        </div>
-        </form>        
-        
-        
-
-
-
-
-    </div>
-
+            <div class="flex flex-col">
+                <div class="flex flex-row">
     
-
-</body>
-
+    
+                    <input type="text" placeholder="Insert Title Here" name="titleBox" class="h-12 mt-8 border-solid border-2 rounded-2xl text-announce_dash w-5/6">
+    
+                    <button class="ml-8 border rounded-xl text-xl mt-8 w-36 bg-blue-300 h-12">Post</button>
+                 
+    
+                </div>
+    
+                <textarea class="mt-10" name="chatBox" placeholder="Insert Description Here" rows="15" cols="120"></textarea>
+    
+            </div>
+        </form>        
+    </main>
+{% endblock %}
 
 </html>
