--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -52,6 +52,12 @@
       .notification_container:hover .ping {
         @apply bg-orange-400 text-white
       }
+      .active {
+        @apply bg-nav_blue border-s-4 border-s-blue-400
+      }
+      .nav_item {
+        @apply rounded-lg hover:bg-orange-400 transition-colors duration-200 ps-3 hover:text-white 
+      }
     }
     
     </style>
@@ -86,10 +92,10 @@
         <p class="mt-3">Menus</p>
     </div>
     <div class="flex flex-col gap-y-3 mt-5 w-full">
-          <a href="{{url_for('dashboard_page')}}" class="hover:bg-nav_blue">Dashboard</a> <!--Dashboard button-->
-        <a href="{{url_for('announcements_page')}}" class="hover:bg-nav_blue">Announcements</a> <!--Announcements button-->
-        <a href="{{url_for('tasks_page')}}" class="hover:bg-nav_blue">Tasks</a> <!--Tasks button-->
-        <a href="" class="hover:bg-nav_blue">Check-ins & Resources</a> <!--Check-ins & resources button-->
+          <a href="{{url_for('dashboard_page')}}" class="nav_item {{ 'active' if active_page == 'dash' else '' }}">Dashboard</a> <!--Dashboard button-->
+        <a href="{{url_for('announcements_page')}}" class="nav_item {{ 'active' if active_page == 'announce' else '' }}">Announcements</a> <!--Announcements button-->
+        <a href="{{url_for('tasks_page')}}" class="nav_item {{ 'active' if active_page == 'task' else '' }}">Tasks</a> <!--Tasks button-->
+        <a href="{{url_for('checkin_page')}}" class="nav_item {{ 'active' if active_page == 'check' else '' }}">Check-ins & Resources</a> <!--Check-ins & resources button-->
     </div>
     <a href = "{{url_for('logout_page')}}" class="text-center font-semibold w-fit py-1 px-6 bg-yellow-200 mx-auto rounded-full mt-auto">Logout</a>
 </div>
