--- a/docs/templates/create_task.html
+++ b/docs/templates/create_task.html
@@ -57,6 +57,9 @@ Create Tasks
                             <input type = "submit" name="createTask" value = "Create Task" class="rounded-full bg-yellow-200 w-fit px-3 py-1 font-semibold mx-auto">
                         </form>
                     </div>  
+                    <img class=" rounded-xl h-5/6 w-1/2" src = "{{url_for('static', filename='images/preview.svg')}}">
+
+                    </img>
 
                 </div>
             </div>
