--- a/docs/templates/dashboard.html
+++ b/docs/templates/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% set active_page = "dash" %}
 
 {% block title %}
 Dashboard
@@ -19,12 +20,15 @@ Dashboard
     <div class="overflow-y-auto h-72 w-5/6 align-middle bg-white mt-3 px-6 relative rounded-lg">
         <div class="text-3xl sticky bg-white top-0 font-semibold py-3">Today's Tasks</div>
             {% for task in tasks %}
-            <div class="  w-full border-b-2 border-b-b_grey flex flex-row bg-white items-center "> <!--Tasks flex-->
-                <img src="{{url_for('static', filename='images/bi_list-task.svg')}}" class="h-10 border-b_grey border-2 p-1 rounded-md mx-6">
-                <div class="flex flex-col pt-3">
-                    <h1 class="text-xl font-bold ">{{ task.title }}</h1> <!--Heading for each task-->
-                    <p class="text-md mb-2">{{ task.task_type }}</p> <!--Task category-->
+            <div class="  w-full border-b-2 border-b-b_grey flex flex-row bg-white items-center justify-between"> <!--Tasks flex-->
+                <div class="flex-row justify-start flex items-center">
+                    <img src="{{url_for('static', filename='images/bi_list-task.svg')}}" class="h-10 border-b_grey border-2 p-1 rounded-md mx-6 ">
+                    <div class="flex flex-col pt-3">
+                        <h1 class="text-xl font-bold ">{{ task.title }}</h1> <!--Heading for each task-->
+                        <p class="text-md mb-2">{{ task.task_type }}</p> <!--Task category-->
+                    </div>
                 </div>        
+                    <input type="checkbox">
             </div>
 
             {% endfor %}
